@@ -14,6 +14,8 @@ The rules for this file:
         * new analysis.contacts.ContactAnalysis1 class that supports a
 	  native contact analysis between arbitrary groups
         * new examples (e.g. peptide helix clustering in a membrane)
+	* fixed Issue 58 (align.rms_fit_trj; fix reported by Joshua
+  	  Adelman)
 
 11/05/10 orbeckst, denniej0, tyler.je.reddy, danny.parton, joseph.goose
         * major release 0.7.0
